--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>AgendaUI</title>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
